# elfuse

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum
.ci/: check-cppcheck.sh  check-format.sh  check-newline.sh  check-security.sh
.github/workflows/: main.yml
cmd/elfuse-oci/: bundlelock.go  bundlelock_test.go  cache_darwin.go  cache_darwin_test.go  cache_key.go  cache_other.go  clone_sweep.go  commands.go  commands_integration_test.go  common.go  common_test.go  csrun.go  csrun_darwin_test.go  etc.go  gc.go  (+26 more)
docs/: internals.md  ltp-conformance.md  oci-design.md  sysroot.md  testing.md  usage.md
mk/: analysis.mk  common.mk  config.mk  help.mk  shim.mk  tests.mk  toolchain.mk
scripts/: check-gvisor-targets.py  gen-syscall-dispatch.py  oci-interop.sh
src/: hvutil.h  main.c  utils.h
tests/: bench-fork-cost.sh  bench-futex-pingpong.c  bench-hot-guard.c  bench-hot-syscalls.c  bench-rosetta.sh  bench-vdso.c  build-gvisor-tests.sh  check-sidecar-state.sh  driver.sh  echo-test.c  fetch-fixtures.sh  hello-dynamic.c  hello-musl.c  hello-write.c  hello.S  hvf-test.h  manifest.txt  mkdir-arg.c  qemu-runner.sh  raw-syscall.h  run-gvisor-conformance.sh  simple.ld  test-absock-cleanup.c  test-abstract-socket.c  test-ancillary.c  test-argc.c  test-busybox.sh  test-case-collision.c  test-cat.c  test-chown-overlay.c  test-cloexec.c  test-clone-childtid.c  test-clone3.c  test-cntvct-thread.c  test-complex.c  test-comprehensive.c  test-coreutils-smoke.sh  test-coreutils.sh  test-cow-fork.c  test-credentials.c  (+147 more)
tests/haskell/: Main.hs  hello-elfuse.cabal
(+156 files in other folders)
