-- Copyright 2026 elfuse contributors
-- Copyright 2025 Moritz Angermann, zw3rk pte. ltd.
-- SPDX-License-Identifier: Apache-2.0

cabal-version:  2.4
name:           hello-elfuse
version:        0.1.0
synopsis:       Minimal Haskell test binary for elfuse
license:        Apache-2.0
author:         Moritz Angermann
maintainer:     elfuse contributors

executable hello-elfuse
  main-is:       Main.hs
  build-depends: base >= 4.7 && < 5
  default-language: Haskell2010
  ghc-options:   -O2
